--- a/manifest.json
+++ b/manifest.json
@@ -28,6 +28,6 @@
     "newtab": "bm.html"
   },
   "content_security_policy": {
-    "extension_pages": "script-src 'self' 'wasm-unsafe-eval'; object-src 'self'"
+    "extension_pages": "script-src 'self' 'wasm-unsafe-eval'; object-src 'self'; img-src 'self' data: blob: https:;"
   }
 }
