feat: Improve collection layout and interaction

--- a/manifest.json
+++ b/manifest.json
@@ -29,6 +29,6 @@
     "newtab": "bm.html"
   },
   "content_security_policy": {
-    "extension_pages": "script-src 'self' 'wasm-unsafe-eval'; object-src 'self'; img-src 'self' data: blob: https: chrome://favicon/;"
+    "extension_pages": "script-src 'self' 'wasm-unsafe-eval'; object-src 'self'; img-src 'self' data: blob: https: https://www.google.com chrome://favicon/*;"
   }
 }
