--- a/manifest.json
+++ b/manifest.json
@@ -8,9 +8,10 @@
   "description": "TheTab.Ninja extension is a launchpage for each new tab and it allows you to manage your bookmarks and tabs.",  
   "host_permissions": [
     "https://www.google.com/*",
-    "https://*.gstatic.com/*", 
-    "https://api.github.com/*",    
-    "https://raw.githubusercontent.com/*"
+    "https://*.gstatic.com/*",
+    "https://api.github.com/*",
+    "https://raw.githubusercontent.com/*",
+    "https://icons.duckduckgo.com/*"
   ],
   "action": {
     "default_popup": "popup.html"
@@ -29,6 +30,6 @@
     "newtab": "bm.html"
   },
   "content_security_policy": {
-    "extension_pages": "script-src 'self' 'wasm-unsafe-eval'; object-src 'self'; img-src 'self' data: blob: https: https://www.google.com chrome://favicon/*;"
+    "extension_pages": "script-src 'self' 'wasm-unsafe-eval'; object-src 'self'; img-src 'self' data: blob: https: https://www.google.com https://icons.duckduckgo.com chrome://favicon/*;"
   }
 }
