--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 3,
-  "name": "TheTab.Ninja",
-  "version": "1.11",
+  "name": "Bookmarks.Organizer",
+  "version": "0.1",
   "icons": {
     "128": "128p.png"
   },
